# Agent-B

./: Cargo.toml  README.md
docs/: README.md  advanced.md  api-reference.md  architecture.md  configuration.md  core-concepts.md  error-handling.md  examples.md  getting-started.md  llm-providers.md  testing.md  tool-system.md
examples/: anthropic_agent.rs  basic_agent.rs  multi_tool_agent.rs  streaming_agent.rs
src/: budget.rs  builder.rs  cache.rs  checkpoint.rs  contracts.rs  engine.rs  error.rs  events.rs  fork.rs  healing.rs  hooks.rs  human.rs  introspection.rs  lib.rs  memory.rs  memory_strategy.rs  plan.rs  prompt.rs  replay.rs  routing.rs  tool_synthesis.rs  tools.rs  trace.rs  transitions.rs  types.rs
src/llm/: anthropic.rs  mock.rs  mod.rs  openai.rs  retry.rs
src/mcp/: client.rs  mod.rs  transport.rs  types.rs
src/states/: acting.rs  done.rs  error.rs  idle.rs  mod.rs  observing.rs  parallel_acting.rs  planning.rs  reflecting.rs  waiting_for_human.rs
tests/: budget_test.rs  human_loop_test.rs  integration_tests.rs  mcp_integration.rs  mcp_server.py  parallel_tool_test.rs  persistence_test.rs  subagent_test.rs
